# traffic-sign-detection

./: .gitignore  CMakeLists.txt  main.cpp  main.py  photo.py  videoRecognition.py  videoToVideo.py
Input/: signs_classes.txt  yolov3_training.cfg
Test/: main.py  static_image_detection.py
